--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>Your Name - Data Scientist</title>
   <!-- Add any desired meta tags, CSS or JavaScript libraries here -->
 </head>
