--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Ahmed Fakhry Elnaggar - Senior Data Scientist</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Your Name - Data Scientist</title>
-  <!-- Add any desired meta tags, CSS or JavaScript libraries here -->
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <h2>Data Scientist</h2>
+    <h1>Ahmed Fakhry Elnaggar</h1>
+    <h2>Senior Data Scientist</h2>
   </header>
   <nav>
     <!-- Add navigation links here -->
