--- a/index.html
+++ b/index.html
@@ -1,30 +1,177 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Ahmed Fakhry Elnaggar - Senior Data Scientist</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <title>Data Scientist Personal Website</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Ahmed Fakhry Elnaggar</h1>
-    <h2>Senior Data Scientist</h2>
+    <nav>
+      <ul>
+        <li><a href="#about-me">About Me</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
-  <nav>
-    <!-- Add navigation links here -->
-  </nav>
   <main>
-    <section id="about">
-      <!-- Add information about yourself here -->
+    <section id="about-me">
+      <h1>Hi! I'm [Name]</h1>
+      <p>Welcome to my personal website! I'm a Data Scientist with experience in [skill 1], [skill 2], and [skill 3]. I love working with data and finding insights that can drive business decisions. Check out my work and skills below, and feel free to contact me!</p>
     </section>
-    <section id="portfolio">
-      <!-- Add portfolio projects or work samples here -->
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>[Skill 1]</li>
+        <li>[Skill 2]</li>
+        <li>[Skill 3]</li>
+        <li>[Skill 4]</li>
+        <li>[Skill 5]</li>
+      </ul>
+    </section>
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <h3>[Project 1 Name]</h3>
+          <p>[Project 1 Description]</p>
+        </li>
+        <li>
+          <h3>[Project 2 Name]</h3>
+          <p>[Project 2 Description]</p>
+        </li>
+        <li>
+          <h3>[Project 3 Name]</h3>
+          <p>[Project 3 Description]</p>
+        </li>
+      </ul>
     </section>
     <section id="contact">
-      <!-- Add contact information or contact form here -->
+      <h2>Contact</h2>
+      <p>Email: [Email Address]</p>
+      <p>LinkedIn: [LinkedIn Profile]</p>
+      <p>GitHub: [GitHub Profile]</p>
     </section>
   </main>
-  <footer>
-    <!-- Add footer information here -->
-  </footer>
 </body>
 </html>
+
+
+And the CSS:
+
+/*file: styles.css*/
+
+* {
+  margin
+: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  color: #333;
+}
+
+header {
+  background-color: #333;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+
+nav ul {
+  display: flex;
+  list-style-type: none;
+}
+
+nav li {
+  margin-left: 10px;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+}
+
+nav a:hover {
+  background-color: #555;
+}
+
+main {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+h1, h2, h3 {
+  margin-bottom: 10px;
+}
+
+section {
+  margin-bottom: 30px;
+}
+
+.section ul {
+  list-style-type: none;
+}
+
+.section li {
+  margin-bottom: 10px;
+}
+
+#projects ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#projects li {
+  margin: 10px;
+  border: 1px solid #333;
+  padding: 10px;
+  flex-basis: calc(33% - 20px);
+}
+
+#projects h3 {
+  margin-top: 0;
+}
+
+#contact {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#contact p {
+  margin-bottom: 10px;
+}
+
+@media (max-width: 767px) {
+    nav ul {
+      flex-direction: column;
+    }
+
+    nav li {
+      margin-left: 0;
+      margin-bottom: 5px;
+    }
+
+    #projects ul {
+      flex-direction: column;
+    }
+
+    #projects li {
+      flex-basis: auto;
+    }
+
+    #contact {
+      flex-direction: column;
+    }
+}
