--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </header>
   <main>
     <section id="about-me">
+      <img src="path/to/your/photo.jpg" alt="Your Name">
       <h1>Hi! I'm [Name]</h1>
       <p>Welcome to my personal website! I'm a Data Scientist with experience in [skill 1], [skill 2], and [skill 3]. I love working with data and finding insights that can drive business decisions. Check out my work and skills below, and feel free to contact me!</p>
     </section>
