--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
   <main>
     <section id="about-me">
       <img src="path/to/your/photo.jpg" alt="Your Name">
-      <h1>Hi! I'm [Name]</h1>
-      <p>Welcome to my personal website! I'm a Data Scientist with experience in [skill 1], [skill 2], and [skill 3]. I love working with data and finding insights that can drive business decisions. Check out my work and skills below, and feel free to contact me!</p>
+      <h1>Hi! I'm Ahmed Fakhry Elnaggar</h1>
+      <p>Welcome to my personal website! I'm a Senior Data Scientist with 3+ years of experience in developing machine learning models and AI research. I am also a masters student of computing systems at Liverpool John Moores University. I love working with data and finding insights that can drive business decisions. Check out my work and skills below, and feel free to contact me!</p>
     </section>
     <section id="skills">
       <h2>Skills</h2>
       <ul>
-        <li>[Skill 1]</li>
-        <li>[Skill 2]</li>
-        <li>[Skill 3]</li>
-        <li>[Skill 4]</li>
-        <li>[Skill 5]</li>
+        <li>Machine Learning and Deep Learning Algorithms and ability to choose the right algorithm or model for a specific task.</li>
+        <li>Data Modeling and Evaluation:Ability to evaluate the performance of machine learning models and optimize them for better accuracy or efficiency.</li>
+        <li>Mathematics and Statistics: Strong background in linear algebra, calculus, probability and statistics. Ability to develop and implement machine learning models.</li>
+        <li>Programming Languages and Frameworks: Proficiency in computer science fundamentals and programming languages such as Python, Java, and C++. Familiarity with libraries and frameworks such as TensorFlow, Scikit-learn, PyTorch, and Keras.</li>
+        <li>Cloud Platforms: Experience with cloud platforms such as AWS.</li>
       </ul>
     </section>
-    <section id="projects">
+    <section id="«selected projects">
       <h2>Projects</h2>
       <ul>
         <li>
