--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
   <main>
     <section id="about-me">
-      <img src="/assets/WhatsApp Image 2022-09-29 at 22.45.16.jpeg" alt="Your Name">
+      <img src="/assets/WhatsApp Image 2022-09-29 at 22.45.16.jpeg" alt="Ahmed Fakhry">
       <h1>Hi! I'm Ahmed Fakhry Elnaggar</h1>
       <p>Welcome to my personal website! I'm a Senior Data Scientist with 3+ years of experience in developing machine learning models and AI research. I am also a masters student of computing systems at Liverpool John Moores University. I love working with data and finding insights that can drive business decisions. Check out my work and skills below, and feel free to contact me!</p>
     </section>
@@ -51,9 +51,9 @@
     </section>
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: ahmedfakhry805@gmail.com</p>
-      <p>LinkedIn: https://www.linkedin.com/in/ahmed-fakhry-5b178017a/</p>
-      <p>GitHub: https://github.com/AhmedFakhry47</p>
+      <p>Email: [ahmedfakhry805@gmail.com]</p>
+      <p>LinkedIn: [https://www.linkedin.com/in/ahmed-fakhry-5b178017a/]</p>
+      <p>GitHub: [https://github.com/AhmedFakhry47]</p>
     </section>
   </main>
 </body>
