--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </section>
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: [ahmedfakhry805@gmail.com]</p>
-      <p>LinkedIn: [https://www.linkedin.com/in/ahmed-fakhry-5b178017a/]</p>
-      <p>GitHub: [https://github.com/AhmedFakhry47]</p>
+      <p>Email: [Email]</p>
+      <p>LinkedIn: [Linedin]</p>
+      <p>GitHub: [Github]</p>
     </section>
   </main>
 </body>
