--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2>Projects</h2>
       <ul>
         <li>
-          <h3>[Project 1 Name]</h3>
+          <h3> Digital Eye </h3>
           <p>[Project 1 Description]</p>
         </li>
         <li>
@@ -51,7 +51,7 @@
     </section>
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: [Email]</p>
+      <p><a href="ahmedfakhry805@gmail.com"> Email </a></p>
       <p>LinkedIn: [Linedin]</p>
       <p>GitHub: [Github]</p>
     </section>
