--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </section>
     <section id="contact">
       <h2>Contact</h2>
-      <p><a href="ahmedfakhry805@gmail.com"> Email </a></p>
-      <p>LinkedIn: [Linedin]</p>
-      <p>GitHub: [Github]</p>
+      <p>Email: ahmedfakhry805@gmail.com</p>
+      <p><a href="ahmedfakhry805@gmail.com"> LinkedIn </a></p>
+      <p><a href="https://github.com/AhmedFakhry47"> Github </a></p>
     </section>
   </main>
 </body>
