--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section id="contact">
       <h2>Contact</h2>
       <p>Email: ahmedfakhry805@gmail.com</p>
-      <p><a href="ahmedfakhry805@gmail.com"> LinkedIn </a></p>
+      <p><a href="https://www.linkedin.com/in/ahmed-fakhry-5b178017a/"> LinkedIn </a></p>
       <p><a href="https://github.com/AhmedFakhry47"> Github </a></p>
     </section>
   </main>
