--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
   <main>
     <section id="about-me">
-      <img src="/assets/WhatsApp Image 2022-09-29 at 22.45.16.jpeg" alt="Ahmed Fakhry">
+      <img src="assets/WhatsApp Image 2022-09-29 at 22.45.16.jpeg" alt="Ahmed Fakhry Elnaggar" class="inline"/>
       <h1>Hi! I'm Ahmed Fakhry Elnaggar</h1>
       <p>Welcome to my personal website! I'm a Senior Data Scientist with 3+ years of experience in developing machine learning models and AI research. I am also a masters student of computing systems at Liverpool John Moores University. I love working with data and finding insights that can drive business decisions. Check out my work and skills below, and feel free to contact me!</p>
     </section>
@@ -37,7 +37,7 @@
       <ul>
         <li>
           <h3> Digital Eye </h3>
-          <p>[Project 1 Description]</p>
+          <p> It's a deep learning model for digitizing handwritten documents, English and Arabic. The model was trained on Thousands of handwritten documents. In‐house team of annotators helped to annotate and label the data for supervised learning.Themodelscored0.15CERonEnglishand0.22CERonArabicanditoutperformedGoogle OCR performance on handwritten documents. </p>
         </li>
         <li>
           <h3>[Project 2 Name]</h3>
