--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <ul>
         <li>
           <h3> Digital Eye </h3>
-          <p> It's a deep learning model for digitizing handwritten documents, English and Arabic. The model was trained on Thousands of handwritten documents. In‐house team of annotators helped to annotate and label the data for supervised learning.Themodelscored0.15CERonEnglishand0.22CERonArabicanditoutperformedGoogle OCR performance on handwritten documents. </p>
+          <p> It's a deep learning model for digitizing handwritten documents, English and Arabic. The model was trained on Thousands of handwritten documents. In‐house team of annotators helped to annotate and label the data for supervised learning.The model scored 0.15 CER on English and 0.22 CER on Arabic and it outperformed Google OCR performance on handwritten documents. </p>
         </li>
         <li>
           <h3>[Project 2 Name]</h3>
