--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </header>
   <main>
     <section id="about-me">
-      <img src="/Personal-Website-/assets/WhatsApp Image 2022-09-29 at 22.45.16.jpeg" width="300" height="250" alt="Ahmed Fakhry Elnaggar" class="inline" border="0"/>
+      <img src="/Personal-Website-/assets/WhatsApp Image 2022-09-29 at 22.45.16.jpeg" width="300px" height="auto" alt="Ahmed Fakhry Elnaggar" class="inline" border="0"/>
       <h1>Hi! I'm Ahmed Fakhry Elnaggar</h1>
-      <p>Welcome to my personal website! I'm a Senior Data Scientist with 3+ years of experience in developing machine learning models and AI research. I am also a masters student of computing systems at Liverpool John Moores University. I love working with data and finding insights that can drive business decisions. Check out my work and skills below, and feel free to contact me!</p>
+      <p>Welcome to my personal website! I'm a Senior Data Scientist with 3+ years of experience in developing machine learning models and AI research. I am also masters student of computing systems at Liverpool John Moores University. I love working with data and finding insights that can drive business decisions. Check out my work and skills below, and feel free to contact me!</p>
     </section>
     <section id="skills">
       <h2>Skills</h2>
@@ -40,7 +40,7 @@
           <p> It's a deep learning model for digitizing handwritten documents, English and Arabic. The model was trained on Thousands of handwritten documents. In‐house team of annotators helped to annotate and label the data for supervised learning.The model scored 0.15 CER on English and 0.22 CER on Arabic and it outperformed Google OCR performance on handwritten documents. </p>
         </li>
         <li>
-          <h3>[Project 2 Name]</h3>
+          <h3> Covid-19 Detection </h3>
           <p>[Project 2 Description]</p>
         </li>
         <li>
