--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
         </li>
         <li>
           <h3> Covid-19 Detection </h3>
-          <p>[Project 2 Description]</p>
-        </li>
-        <li>
-          <h3>[Project 3 Name]</h3>
-          <p>[Project 3 Description]</p>
+          <p>State of the art deep learning model for detecing COVID-19 from COUGHVID cough audio files. The project achieved 0.98 AUC for audio samples with COVID-19 positive samples. It was open-sourced and published on Interspeech Conference 2021.</p>
         </li>
       </ul>
     </section>
