--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
         </li>
       </ul>
     </section>
+     <section id="Publications">
+      <ul>
+        <li>
+          <h3> ”Virufy: A Multi‐Branch Deep Learning Network for Automated Detection of COVID‐19,” https://www.isca-speech.org/archive/pdfs/interspeech_2021/fakhry21_interspeech.pdf,March 2021, ,Interspeech conference 2021</h3>
+        </li>
+        <li>
+          <h3> ”Virufy:GlobalApplicabilityofCrowdsourcedandClinicalDatasetsforAIDetectionofCOVID‐19fromCoughAudio Samples,”https://arxiv.org/abs/2011.13320,Nov 2020, Awaiting AE Recommendation from IEEE TAI. </h3>
+        </li>
+      </ul>
+    </section>
     <section id="contact">
       <h2>Contact</h2>
       <p>Email: ahmedfakhry805@gmail.com</p>
