--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       </ul>
     </section>
      <section id="Publications">
+      <h2>Publications</h2>
       <ul>
         <li>
           <h3> ”Virufy: A Multi‐Branch Deep Learning Network for Automated Detection of COVID‐19,” https://www.isca-speech.org/archive/pdfs/interspeech_2021/fakhry21_interspeech.pdf,March 2021, ,Interspeech conference 2021</h3>
