--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h2>Publications</h2>
       <ul>
         <li>
-          <h3><a href="https://www.isca-speech.org/archive/pdfs/interspeech_2021/fakhry21_interspeech.pdf">"Virufy: A Multi‐Branch Deep Learning Network for Automated Detection of COVID‐19", interspeech conference </a></h3>
+          <h3><a href="https://www.isca-speech.org/archive/pdfs/interspeech_2021/fakhry21_interspeech.pdf">"Virufy: A Multi‐Branch Deep Learning Network for Automated Detection of COVID‐19", interspeech conference 2021 </a></h3>
         </li>
         <li>
           <h3> ”Virufy:GlobalApplicabilityofCrowdsourcedandClinicalDatasetsforAIDetectionofCOVID‐19fromCoughAudio Samples,”https://arxiv.org/abs/2011.13320,Nov 2020, Awaiting AE Recommendation from IEEE TAI. </h3>
