--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h3><a href="https://www.isca-speech.org/archive/pdfs/interspeech_2021/fakhry21_interspeech.pdf">"Virufy: A Multi‐Branch Deep Learning Network for Automated Detection of COVID‐19", interspeech conference 2021 </a></h3>
         </li>
         <li>
-          <h3> ”Virufy:GlobalApplicabilityofCrowdsourcedandClinicalDatasetsforAIDetectionofCOVID‐19fromCoughAudio Samples,”https://arxiv.org/abs/2011.13320,Nov 2020, Awaiting AE Recommendation from IEEE TAI. </h3>
+          <h3><a href="https://arxiv.org/abs/2011.13320" >”Virufy:Global Applicability of Crowd sourced and Clinical Datasets for AI Detection of COVID‐19 from Cough Audio Samples”, Awaiting AE Recommendation from IEEE TAI. </a></h3>
         </li>
       </ul>
     </section>
